--- a/about/index.html
+++ b/about/index.html
@@ -74,12 +74,11 @@
 
         <div id="image01" class="image"><a href="https://www.linkedin.com/in/bret-harvestine/"><img src="profile.jpg" alt="Rich" /></a></div>
         <h1 id="text02">About</h1>
-        <p id="text01"> I am an enthusiastic and ambitious young professional, seeking career opportunities to expand my knowledge in the business world. For the past six years, I have held various leadership roles in customer service positions, orchestrating and controlling inventory.  I have provided marketing and digital transformation consultative services to Fortune 1000 Retail Marketing Executives.  I have gained experience with Tableau, SPSS, Google Analytics, GoogleAdWords, Microsoft Suite, GoogleSuite, and Salesforce.</p>
+        <p id="text01">I am an enthusiastic and ambitious young professional, seeking career opportunities to expand my knowledge in the business world. I would describe myself as a self-starter, ambitious individual. I am able to lead by example and communicate efficiently and effectively. I thrive in both individual and team settings. Being adaptable and eager to learn is one of my greatest qualities.</p>
+        <p id="text01">I believe sales is a role that continuously allows you to connect with others. I am passionate about building and maintaining relationships with others, both personally and professionally. I enjoy how a sales role puts others first by understanding their needs and being an active listener.</p>
+        <p id="text01">In addition, I love how omini- channel marketing allows you to continuously communicate with consumers. I love how the approach creates a unified message, voice and brand for a company. Being able to create multiple touch points and enhance consumers' experiences is a creative and rewarding role.</p>
+        <p id="text01">When I am not on the job, I love staying active and exploring new places; Whether it is hiking, biking or running, count me in! I also have a hidden talent for making breakfast foods.</p>
 
- <p id="text01">Sales is a role that continuously allows you to connect with others. I am passionate about building and maintaining relationships with others, both personally and professionally. I enjoy how a sales role puts others first by understanding their needs and being an active listener. Omini- channel marketing allows you to continuously communicate with consumers. I love how the approach creates a unified message, voice and brand for a company. Being able to create multiple touch points and enhance consumers' experiences is a creative and rewarding role. </p>
-
-<p id="text01">When I am not on the job, I love staying active and exploring new places; Whether it is hiking, biking or running, count me in! I also have a hidden talent for making breakfast foods.
-</p>
         <hr id="divider01">
         <ul id="icons01" class="icons">
           <li><a class="n02" href="tel:2624027539"><svg><use xlink:href="#icon-904"></use></svg><span class="label">Phone</span></a></li>
