--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ gtag('config', 'UA-126475076-1');
                 </div>
                 <span id="typed" style="white-space:pre;"></span>
             </h2>
-        <p id="text01"><span>Digital Marketing Specialist</br> Major: BA General Sales, Merchandising, and Related Marketing Operations </br><strong> Personal References Below: </strong></span><br /> <br /> <span><a href="Letter of Recomendation.pdf">Letter of Recommendation</a></span><br /> <span><a href="References.pdf">References</a></span></p>
+        <p id="text01"><span>Digital Marketing Specialist</br><strong> Personal References Below: </strong></span><br /> <br /> <span><a href="Letter of Recomendation.pdf">Letter of Recommendation</a></span><br /> <span><a href="References.pdf">References</a></span></p>
         <hr id="divider01">
         <ul id="icons01" class="icons">
            <li><a class="n02" href="tel:2624027539"><svg><use xlink:href="#icon-904"></use></svg><span class="label">Phone</span></a></li>
